# Agentic-News-Verifier

./: Dockerfile  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  logic.py  main.py  tasks.py
