[build-system]
requires = ["setuptools>=61.0", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-fake-news-verifier"
version = "0.1.0"
description = "Agentic News Verification Environment for Meta Hackathon"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "httpx"
]

[tool.setuptools]
packages = ["server"]
